Add outhole drivers to BoP, Funhouse, and T2.

--- a/machine/t2/t2.md
+++ b/machine/t2/t2.md
@@ -391,3 +391,5 @@ Kickback Driver: driver(spsol),
 Skull Drop: driver(drop),
 	sol_up=SOL_SKULL_DROP_UP, sol_down=SOL_SKULL_DROP_DOWN,
 	sw=SW_DROP_TARGET, sw_event=sw_drop_target
+
+Outhole: driver(outhole), sol=SOL_OUTHOLE, swno=SW_OUTHOLE, swevent=sw_outhole
