--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-
 This is FreeWPC, an open source operating system for the Williams
 Pinball Controller (WPC) family of pinball machines.  FreeWPC is
 licensed under the GNU General Public License, Version 2.
@@ -16,8 +15,5 @@ importantly, you'll need a copy of the gcc6809 cross-compiler.
 Many standard UNIX utilities are needed as well.  FreeWPC has been
 built successfully on Linux and Cygwin.
 
-Email suggestions/comments/questions to <brian@oddchange.com>.
-
-Visit the homepage at http://www.oddchange.com/freewpc for more
-information.
-
+The original creator and maintainer was <brian@oddchange.com>
+but he stepped down from the project many years ago.
